fix: Align module navigation with sidenav items
- Remove wrapper <li> around collapsible in sidenav
- Add CSS overrides to fix Materialize default padding
- Use margin-left: -15px to align modules with Startseite/Was gibt's Neues

--- a/static/css/eliza-docs.css
+++ b/static/css/eliza-docs.css
@@ -175,20 +175,43 @@ body.with-sidebar {
     color: var(--eliza-blue);
 }
 
-/* Collapsible in Sidenav */
-.sidenav .collapsible {
-    border: none;
-    box-shadow: none;
-    margin: 0;
+/* Collapsible in Sidenav - Override Materialize and browser defaults */
+nav.sidenav > ul.collapsible,
+nav.sidenav > ul.collapsible.collapsible-accordion,
+.sidenav .collapsible,
+.sidenav > .collapsible,
+.sidenav ul.collapsible {
+    border: none !important;
+    box-shadow: none !important;
+    margin: 0 !important;
+    margin-left: -15px !important;
+    padding: 0 !important;
+    padding-left: 0 !important;
+    list-style: none !important;
+    -webkit-padding-start: 0 !important;
+    -moz-padding-start: 0 !important;
+}
+
+nav.sidenav > ul.collapsible > li,
+.sidenav .collapsible > li,
+.sidenav .collapsible li {
+    padding: 0 !important;
+    padding-left: 0 !important;
+    margin: 0 !important;
+    margin-left: 0 !important;
+    list-style: none !important;
 }
 
 .sidenav .collapsible-header {
     display: flex;
     align-items: center;
-    padding: 0 24px;
+    padding: 0 24px !important;
+    padding-left: 24px !important;
+    margin: 0 !important;
+    margin-left: 0 !important;
     height: 48px;
     line-height: 48px;
-    border: none;
+    border: none !important;
     color: var(--text-primary);
     background-color: transparent;
     /* Text overflow handling */
@@ -206,12 +229,16 @@ body.with-sidebar {
     color: var(--eliza-blue);
 }
 
-.sidenav .collapsible-header i.material-icons {
+.sidenav .collapsible-header .module-link i.material-icons {
     margin-right: 16px;
     color: var(--text-secondary);
+    width: 24px;
+    height: 24px;
+    font-size: 24px;
+    line-height: 24px;
 }
 
-.sidenav .collapsible-header.active i.material-icons {
+.sidenav .collapsible-header.active .module-link i.material-icons {
     color: var(--eliza-blue);
 }
 
